Changes in PixelLight 0.9.5-R1 (not yet released)
- Feature: "PLGraphics": Added basic support for half as image data format
- Feature: "PLGraphics::ImageLoaderDDS": Added support for half/float images
- Change (Windows): Migrated from Microsoft Visual Studio 2008 to Microsoft Visual Studio 2010 as the main development IDE
- Change (Windows): OpenAL: Updated "OpenAL32.dll" from "6.14.357.22" to version "6.14.357.24", updated "wrap_oal.dll" from "2.1.8.1" to version "2.2.0.5"
- Change (Windows): Updated "Newton Game Dynamics" from "2.24" to "2.28"
- Change: Migrated from "NULL"-definition for a null pointer to "nullptr" introduced by C++0x and already supported by multiple modern compilers
- Change: "PLGeneral::String": Refactoring of the UTF8 support
- Change: Updated libogg from "1.2.0" to "1.2.2"
- Change: Updated libvorbis from "1.3.1" to "1.3.2"
- Change: Updated from "Cg Toookit 3.0 - July 2010" to "Cg Toookit 3.0 - November 2010"
- Change: Updated OpenEXR from "1.4.0" to "1.6.1"
- Bugfix: The PLImageLoaderEXR plugin was broken, loading exr (high dynamic range image file format) images is working again
- Bugfix: "PLGraphics::IEConvert" e.g. RGB to RGBA is now working for floating point image formats
- Bugfix: "PLGraphics::IEScale" was not always working correctly
- Bugfix: "PLPhysics::SNMPhysicsCharacterController" rotation was broken in "PixelLight 0.9.4-R1"


Changes in PixelLight 0.9.4-R1 (released on December 23, 2010)
- Feature: Linux 64 bit support for a minimal build added (64 bit support for optional projects not yet added)
- Feature: Added basic PLDemoRendererTexturing demo
- Feature: Added "PLEngine::SceneRendererTool" helper class for simplified scene renderer access
- Feature: Autodesk 3ds Max 2011 scene exporter added
- Feature: Performance improvements within the string implementation
- Feature: Added a static adapter class within PLGeneral for mapping Qt strings to PixelLight strings and vice versa